[workspace]
resolver = "3"
members = [
	"crates/poe_data_tools-cli", 
	"crates/poe_data_tools-lib"
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
incremental = true
