[package]
name = "poe_data_tools-cli"
version = "2.0.0"
readme = "README.md"
description = "A CLI for working with Path of Exile game data"

edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "poe_data_tools"
path = "src/main.rs"

[features]
default = []
debug = ["winnow/debug"]

[dependencies]
poe_data_tools = { path = "../poe_data_tools-lib", version = "2.0.0-alpha.1" }

# Serialisation
serde = { workspace=true, features = ["derive"]}
serde_json = { workspace = true, features = ["preserve_order"] }

# Error handling
anyhow = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# Content download & IO
dirs = { workspace = true }
bytes = { workspace = true }

# CLI
clap = { workspace = true, features = ["derive", "string", "help"] }
glob = { workspace = true }

# Helpers
itertools = { workspace = true }

# Arrow - for dataframe stuff
arrow-csv = { workspace = true }
arrow-array = { workspace = true }
arrow-cast = { workspace = true }
arrow-schema = { workspace = true }

# Forked version of winnow with better debugging capabilities
winnow = { workspace = true }

# For art decoding
image = { workspace = true, default-features = false, features = ["png"] }
image-extras = { workspace = true, default-features = false, features = ["dds"]}
