[package]
name = "poe_data_tools"
version = "1.0.0"
edition = "2024"

[lib]
name = "poe_data_tools"
path = "src/lib.rs"

[dependencies]

# Error handling
anyhow = "1.0.100"

murmurhash64 = "0.3.1"
oozextract = "0.5.0"

reqwest = { version = "0.12.25", features = ["blocking"] }
url = "2.5.7"
dirs = "6.0.0"
bytes = "1.11.0"
glob = "0.3.3"
serde = {version = "1.0.228", features = ["derive"]}
serde_with = "3.18.0"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
rayon = "1.11.0"
iterators_extended = "0.2.0"
itertools = "0.14.0"
regex = "1.12.3"
enum_dispatch = "0.3.13"
log = "0.4.29"
env_logger = "0.11.10"

# Async stuff
tokio = { version = "1.51.1", features = ["fs", "rt"]}
futures = "0.3.32"

# Arrow - CSV table export
arrow-csv = "56.2.0"
arrow-array = "56.2.0"
arrow-cast = "56.2.0"
arrow-schema = "56.2.0"

# Parsing
# Forked version of winnow with better debugging capabilities
winnow = { package = "adamthedash_winnow", version = "1.0.0" }
annotated_parser = { version = "0.1.0", features = ["f16"] }

# For art decoding
image = { version = "0.25.10", default-features = false, features = ["png"] }
image-extras = { version = "0.1.1", default-features = false, features = ["dds"]}
