[package]
name = "poe_data_tools"
version = "1.0.0"
readme = "README.md"

edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
name = "poe_data_tools"
path = "src/lib.rs"

[dependencies]
# Error handling
anyhow = "1.0.100"

# Content download
reqwest = { version = "0.12.25", features = ["blocking"] }
url = "2.5.7"
dirs = "6.0.0"
bytes = "1.11.0"
tokio = { version = "1.51.1", features = ["fs", "rt"]}
futures = "0.3.32"

# Logging
log = "0.4.29"

# Serialisation
serde = {version = "1.0.228", features = ["derive"]}
serde_with = "3.18.0"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
# CSV table export
arrow-array = "56.2.0"

# Parsing
# Forked version of winnow with better debugging capabilities
winnow = { package = "adamthedash_winnow", version = "1.0.0" }
annotated_parser = { version = "0.1.0", features = ["f16"] }
regex = "1.12.3"

rayon = "1.11.0"
iterators_extended = "0.2.0"
itertools = "0.14.0"
enum_dispatch = "0.3.13"
murmurhash64 = "0.3.1"
oozextract = "0.5.0"


[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
glob = "0.3.3"

[[bench]]
name = "fs"
harness = false

[[bench]]
name = "coverage"
harness = false
