[package]
name = "poe_data_tools"
version = "2.0.0"
readme = "README.md"
description = "A library for working with Path of Exile game data"

edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
name = "poe_data_tools"
path = "src/lib.rs"

[dependencies]
# Error handling
thiserror = { workspace = true }

# Serialisation
serde = { workspace = true, features = ["derive"]}
serde_with = { workspace = true }
serde_json = { workspace = true }

# Logging
log = { workspace = true }

# CSV table export
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

# Content download & IO
reqwest = { workspace = true, features = ["blocking"] }
url = { workspace = true }
dirs = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt"]}
futures = { workspace = true }

# Parsing
# Forked version of winnow with better debugging capabilities
winnow = { workspace = true }
annotated_parser = { workspace = true, features = ["f16"] }
regex = { workspace = true }

# Iterator / parallelism helpers
rayon = { workspace = true }
iterators_extended = { workspace = true }
itertools = { workspace = true }

# GGG-related
murmurhash64 = { workspace = true }
oozextract = { workspace = true }

enum_dispatch = { workspace = true }


[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
tempfile = "3.27"

glob = { workspace = true }
env_logger = { workspace = true }

[[bench]]
name = "fs"
harness = false

[[bench]]
name = "coverage"
harness = false
